# Monkey_Pox_Detector

./: main.py  pyproject.toml  training.txt  y.pkl
